Add: dotenv, service/controller split
